# Orion-Intelligence

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  main.py
app/agent/: orchestrator.py  prompts.py  schemas.py
app/api/: rest.py
app/api/graphql/: __init__.py  root.py  schema.py
app/api/graphql/inputs/: __init__.py  ask_input.py
app/api/graphql/mutations/: __init__.py
app/api/graphql/queries/: __init__.py  ask.py  tools.py
app/api/graphql/types/: __init__.py  ask_response.py  tool_call_trace.py
app/core/: llm.py  logging.py
app/tools/: echo.py  markets.py  news.py  registry.py  search.py  weather.py
tests/: conftest.py  test_agent.py  test_api.py  test_tools.py
